--- a/edge-functions/feature-flag-unleash/package.json
+++ b/edge-functions/feature-flag-unleash/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@unleash/nextjs": "^0.0.6",
     "@vercel/examples-ui": "^1.0.4",
+    "js-cookie": "^3.0.1",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.2",
     "@types/node": "^17",
     "@types/react": "latest",
     "autoprefixer": "^10.4.7",
